[gd_scene load_steps=3 format=3 uid="uid://mpnrd2kfdj2a"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_50iis"]
[ext_resource type="Texture2D" uid="uid://bjsgl8qjwl27b" path="res://Assets/Hearth_full.png" id="2_smcgn"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50iis")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 4.0
offset_right = 6.0
offset_bottom = 27.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 960.0
offset_right = 1024.0
offset_bottom = 64.0
texture = ExtResource("2_smcgn")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 1024.0
offset_right = 1088.0
offset_bottom = 64.0
texture = ExtResource("2_smcgn")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer"]
offset_left = 1088.0
offset_right = 1152.0
offset_bottom = 64.0
texture = ExtResource("2_smcgn")
